--- a/custom_components/apple_tv_mrp/manifest.json
+++ b/custom_components/apple_tv_mrp/manifest.json
@@ -1,5 +1,5 @@
 {
-    "domain": "apple_tv",
+    "domain": "apple_tv_mrp",
     "name": "Apple tv",
     "documentation": "https://www.home-assistant.io/components/apple_tv",
     "requirements": [
